Some changes to User layers