@@ -19,14 +19,13 @@ import java.util.Objects;
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepo;
-    private final AccountRepository accountRepo;
 
     @Override
     @Transactional
     public User findById(Long userId) {
         return userRepo.findById(userId).orElseThrow(
                 () -> new EntityNotFoundException(
-                        String.format("User with  id: %d not found", userId)
+                        "User with  id: %d not found".formatted(userId)
                 )
         );
     }
@@ -39,7 +38,7 @@ public class UserServiceImpl implements UserService {
         String phoneNumber = user.getPhoneNumber();
         if (userRepo.existsByEmailOrPhoneNumber(email, phoneNumber)) {
             throw new EntityExistsException(
-                    String.format("User with email: [%s] or phone number: [%s] already exists!", email, phoneNumber)
+                    "User with email: [%s] or phone number: [%s] already exists!".formatted(email, phoneNumber)
             );
         }
 
@@ -48,7 +47,8 @@ public class UserServiceImpl implements UserService {
         BankAccount bankAccount = BankAccount.builder()
                 .user(savedUser)
                 .build();
-        savedUser.setBankAccount(accountRepo.save(bankAccount));
+        savedUser.setBankAccount(bankAccount);
+        savedUser = userRepo.save(savedUser);
 
         return savedUser;
 
